@@ -1,1 +1,1 @@
-    <div id="folder"><a href="$FILEURL/"><img border="0" src="/icons/gallery/agfolder.png"><br>$FILE</a></div>
+    <div id="folder"><a href="{ $FILEURL }/"><img border="0" src="/icons/gallery/agfolder.png"><br>{ $FILE }</a></div>
