@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="$INTERVAL; url=$URL?slideshow=$INTERVAL&width=$WIDTH" />
+<meta http-equiv="refresh" content="{ $INTERVAL }; url={ $URL }?slideshow={ $INTERVAL }&width={ $WIDTH }" />
